Terminada prueba de nivel

--- a/interfacesweb/PruebaNivel/PruebaNivel.html
+++ b/interfacesweb/PruebaNivel/PruebaNivel.html
@@ -35,46 +35,6 @@
             </div>
         </div>
         <div class="listaDeProductosCompletaPrincipal">
-            <div class="productoIndividual">
-                <div class="imagenProductoIndividual">
-                    <img src="Foto.jpg" />
-                    <i class="fa-regular fa-heart corazonProductoIndividual"></i>
-                </div>
-                <div class="informacionProductoIndividual">
-                    <span>Treasures Bronze Emperador</span>
-                    <span>£32.00 / m²</span>
-                </div>
-            </div>
-            <div class="productoIndividual">
-                <div class="imagenProductoIndividual">
-                    <img src="Foto.jpg" />
-                    <i class="fa-regular fa-heart corazonProductoIndividual"></i>
-                </div>
-                <div class="informacionProductoIndividual">
-                    <span>Treasures Bronze Emperador</span>
-                    <span>£32.00 / m²</span>
-                </div>
-            </div>
-            <div class="productoIndividual">
-                <div class="imagenProductoIndividual">
-                    <img src="Foto.jpg" />
-                </div>
-                <div class="informacionProductoIndividual">
-                    <span>Treasures Bronze Emperador</span>
-                    <span>£32.00 / m²</span>
-                </div>
-                <!-- <i class="fa-solid fa-heart"></i> -->
-            </div>
-            <div class="productoIndividual">
-                <div class="imagenProductoIndividual">
-                    <img src="Foto.jpg" />
-                    <i class="fa-regular fa-heart corazonProductoIndividual"></i>
-                </div>
-                <div class="informacionProductoIndividual">
-                    <span>Treasures Bronze Emperador</span>
-                    <span>£32.00 / m²</span>
-                </div>
-            </div>
         </div>
         <div class="paginacionPrincipal">
             <span class="paginacionTextoPrincipal paginacionTextoPrincipalActiva">1</span>
@@ -86,5 +46,7 @@
         </div>
     </div>
 </body>
-
+<head>
+    <script src="Logica.js"></script>
+</head>
 </html>
