Codding Addict terminado

--- a/desarrolloweb/PruebaNivel/CodingAddict.html
+++ b/desarrolloweb/PruebaNivel/CodingAddict.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/38818051b5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Estilo.css">
     <title>Coding Addict</title>
 </head>
+
 <body>
-    
+    <header class="headerMain flex justify-between items-center px-8">
+        <h1 class="h1Main flex items-center gap-2">Coding <p class="colorAzul">Addict</p></h1>
+        <div class="flex gap-4 font-l socialLinks">
+            <a>Home</a>
+            <a>About</a>
+            <a>Projects</a>
+            <a>Contact</a>
+        </div>
+        <div class="flex gap-4 font-xl socialLinks">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-behance"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-solid fa-gem"></i></a>
+        </div>
+        <div class="barraLateral">
+            <i class="fa-solid fa-grip-lines burger"></i>
+        </div>
+    </header>
+    <div class="menuResponsive flex flex-col gap-4 font-l">
+        <a>Home</a>
+        <a>About</a>
+        <a>Projects</a>
+        <a>Contact</a>
+    </div>
 </body>
+
+<head>
+    <script src="Logica.js"></script>
+</head>
+
 </html>
